// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-avatar renders component 1`] = `
<wpp-avatar class="size-xs wpp-avatar" color="var(--wpp-dataviz-color-cat-neutral-4)" exportparts="image, content, tooltip" role="button" tabindex="0" style="--wpp-avatar-generated-bg-color: var(--wpp-dataviz-color-cat-neutral-4); --avatar-border-radius: var(--wpp-border-radius-round);">
  <mock:shadow-root>
    <div class="without-image" part="content"></div>
  </mock:shadow-root>
</wpp-avatar>
`;

exports[`wpp-avatar renders component with abbreviation message when image source was not provided 1`] = `
<wpp-avatar class="size-xs with-tooltip wpp-avatar" color="var(--wpp-dataviz-color-cat-neutral-4)" exportparts="image, content, tooltip" name="Test Avatar" role="presentation" with-tooltip="" style="--wpp-avatar-generated-bg-color: var(--wpp-dataviz-color-cat-neutral-4); --avatar-border-radius: var(--wpp-border-radius-round);">
  <mock:shadow-root>
    <wpp-tooltip part="tooltip" text="Test Avatar">
      <div class="without-image" part="content">
        T
      </div>
    </wpp-tooltip>
  </mock:shadow-root>
</wpp-avatar>
`;

exports[`wpp-avatar renders component with abbreviation when flag with-tooltip is disabled 1`] = `
<wpp-avatar class="size-xs wpp-avatar" color="var(--wpp-dataviz-color-cat-neutral-4)" exportparts="image, content, tooltip" name="Test Avatar" role="button" tabindex="0" style="--wpp-avatar-generated-bg-color: var(--wpp-dataviz-color-cat-neutral-4); --avatar-border-radius: var(--wpp-border-radius-round);">
  <mock:shadow-root>
    <div class="without-image" part="content">
      T
    </div>
  </mock:shadow-root>
</wpp-avatar>
`;

exports[`wpp-avatar renders component with image when source was provided 1`] = `
<wpp-avatar class="size-m with-tooltip wpp-avatar" color="var(--wpp-dataviz-color-cat-neutral-4)" exportparts="image, content, tooltip" name="Test Avatar" role="presentation" size="m" src="https://mui.com/static/images/avatar/1.jpg" with-tooltip="" style="--wpp-avatar-generated-bg-color: var(--wpp-dataviz-color-cat-neutral-4); --avatar-border-radius: var(--wpp-border-radius-round);">
  <mock:shadow-root>
    <wpp-tooltip part="tooltip" text="Test Avatar">
      <div class="image-wrapper" part="content">
        <img alt="Test Avatar - avatar" class="image" part="image" src="https://mui.com/static/images/avatar/1.jpg">
      </div>
    </wpp-tooltip>
  </mock:shadow-root>
</wpp-avatar>
`;

exports[`wpp-avatar renders component with number of hidden avatars when number was provided 1`] = `
<wpp-avatar amount-of-hidden-avatars="4" class="size-xs wpp-avatar" color="var(--wpp-dataviz-color-cat-neutral-4)" exportparts="image, content, tooltip" role="button" tabindex="0" style="--wpp-avatar-generated-bg-color: var(--wpp-dataviz-color-cat-neutral-4); --avatar-border-radius: var(--wpp-border-radius-round);">
  <mock:shadow-root>
    <div class="with-amount-of-hidden-avatars without-image" part="content">
      +4
    </div>
  </mock:shadow-root>
</wpp-avatar>
`;
